# KaijuLab

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SLEIGH
examples/plugins/: batch_rename.rhai  entropy_report.rhai  hello.rhai  vuln_triage.rhai
samples/PwnableTW/3x17/: 3x17.kaiju.db
samples/PwnableTW/Start/: start.kaiju.db  start.kaiju.html
samples/PwnableTW/Start/start.kaiju_scripts/: exploit_ok.py  script_002.py  script_003.py  script_004.py  script_005.py  script_006.py  script_007.py  script_009.py  script_010.py  script_011.py  script_012.py  script_013.py  script_014.py  script_015.py  script_016.py  script_017.py  script_018.py  script_019.py  script_020.py  script_021.py  script_022.py  script_023.py  script_024.py  script_025_ok.py
samples/PwnableTW/calc/calc.kaiju_scripts/: exploit_ok.py
samples/PwnableTW/orw/: orw.kaiju.db
samples/PwnableTW/orw/orw.kaiju_scripts/: script_001_err.py
src/: agent.rs  arch.rs  config.rs  dwarf.rs  hashdb.rs  llm.rs  main.rs  plugin.rs  project.rs  tools.rs  tui.rs  ui.rs
src/decompiler/: mod.rs  symbol_resolver.rs
src/decompiler/ir/: abstract_syntax_tree.rs  address.rs  basic_block.rs  control_flow_graph.rs  expression.rs  high_function.rs  mod.rs  program_tree_structure.rs  scope.rs  type_system.rs
src/decompiler/memory/: mod.rs  navigation.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs
