[package]
name = "kaijulab"
version = "0.1.0"
edition = "2021"
description = "KaijuLab — LLM-native Reverse Engineering Lab"

[[bin]]
name = "kaijulab"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls so no OpenSSL dep)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal UI
colored = "2"
indicatif = "0.17"
console = "0.15"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"

# Binary analysis
object = "0.36"
goblin = "0.8"
iced-x86 = "1"

# Decompiler (ported from Ouroboros, MIT/Apache-2.0)
sleigh-runtime = { git = "https://github.com/icicle-emu/icicle-emu" }
sleigh-compile = { git = "https://github.com/icicle-emu/icicle-emu" }
pcode = { git = "https://github.com/icicle-emu/icicle-emu" }
nodit = "0.9"
smallvec = "1"
petgraph = "0.8"
enumset = "1"

# Auth
jsonwebtoken = "9"
chrono = "0.4"

# Async trait objects
async-trait = "0.1"

# Error handling
anyhow = "1"

# DWARF debug-info parsing
gimli = "0.31"

# Persistent project database
rusqlite = { version = "0.31", features = ["bundled"] }

# Windows PDB symbol loading
pdb = "0.8"

# System clipboard (copy panel content with 'y')
arboard = "3"

# Multi-architecture disassembler (ARM64, ARM, MIPS, …)
capstone = "0.12"

# Configuration file (~/.kaiju/config.toml)
toml = "0.8"

# Scripting / plugin engine (Rhai — pure Rust, embeds cleanly)
rhai = { version = "1", features = ["sync"] }
